NULL =

themedir = $(pkgdatadir)/icons/hicolor
size = scalable
context = status

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = 			        	\
	audio-input-monitor-muted.svg     \
	audio-input-monitor-low.svg     \
	audio-input-monitor-medium.svg     \
	audio-input-monitor-high.svg     \
	audio-input-microphone-high.svg		\
	audio-input-microphone-low.svg		\
	audio-input-microphone-medium.svg	\
	audio-input-microphone-muted.svg	\
	$(NULL)

EXTRA_DIST =		\
	$(icons_DATA)	\
	$(NULL)


-include $(top_srcdir)/git.mk
